--- a/core/static/css/_main.scss
+++ b/core/static/css/_main.scss
@@ -322,3 +322,7 @@ main{
     }
 }
 
+.block-Overflow {
+  margin-bottom: 20px;
+}
+
